When clicking on "Send Feedback..." after I've set my language to German (then it's called "Fehler Melden (Englisch)) my browser wants to open a website that doesn't exist: https://www.libreoffice.org/get-help/bug/?version=4.0.0.0.beta1&locale=de&module=DrawingDocument When LO is set to English the website exists (https://www.libreoffice.org/get-help/bug/?version=4.0.0.0.beta1&locale=en-US&module=DrawingDocument). Solution: If there is no website for the specific language available take English as default.
To make it clear, this link is inside LibreOffice in the "Help"-Menu.
Cc'ing Rob, who IMHO is working on the bugzilla assistant. Rob, can you investigate if you can work on that, or if it's better to catch it via mod_rewrite?
I have send an email to the website-list. To see how we can solve this.
submit a patch to solve this https://gerrit.libreoffice.org/#/c/1408/
Rob Snelders committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=3b87d3dd507cd48286160e62383f48e2f70f0067 fdo#58370 - 'Send Feedback...' URL invalid in other languages then English The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Rob Snelders committed a patch related to this issue. It has been pushed to "libreoffice-4-0": http://cgit.freedesktop.org/libreoffice/core/commit/?id=91a9b1f163fb698a0fae657b7cc6f60a617c5760&g=libreoffice-4-0 fdo#58370 - 'Send Feedback...' URL invalid in other languages then English It will be available in LibreOffice 4.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
*** Bug 58935 has been marked as a duplicate of this bug. ***