fdo#58370 - 'Send Feedback...' URL invalid in other languages then English

Change-Id: Idfd689c86700fe3b6ec2af477973a2cb484fc29d